objects/Custom_Attachment__c.object
<CustomObject>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Custom_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who created the original attachment (before it has been converted to Contract)</description>
        <label>Original Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Company_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Created_Date__c</fullName>
        <description>A date where was the original attachment created (before conversion to Contract happened)</description>
        <label>Original Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Original_Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Company_Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Last_Modified_Date__c</fullName>
        <label>Original Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                    <default>true</default>
                    <label>Contract</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK("/" + Attachment__c, "View")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Company Contract</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>